--- a/app/views/customer/services/index.html.erb
+++ b/app/views/customer/services/index.html.erb
@@ -1,3 +1,11 @@
+<script type="application/javascript">
+    $(document).ready(function(){
+        $('.sort-arrow').click(function(){
+            var click_id = this.getAttribute('dyn_click');
+            $('ul.product_'+ click_id).slideToggle();
+        });
+    });
+</script>
 <div class="customer-main-con">
   <div class="row">
     <div class="col-sm-12">
@@ -9,40 +17,83 @@
 
   <div class="row">
     <div class="col-sm-12">
-      <table class="table table-striped">
-        <thead>
-        <tr class="info">
-          <th>Description</th>
-          <th>Category</th>
-          <th>Subcategory</th>
-          <!--<th>Start at</th>-->
-          <!--<th>End at</th>-->
-          <th>Action</th>
-        </tr>
-        </thead>
-        <tbody>
-        <% @services.each do |service| %>
-            <tr class="data">
-              <td><%= service.service_description%></td>
-              <td><%= service.subcategory.category.name %></td>
-              <td><%= service.subcategory.name %></td>
-              <!--<td><%#= service.start_at.strftime(time_format) %></td>-->
-              <!--<td><%#= service.end_at.strftime(time_format) %></td>-->
-              <td>
-                <%= link_to customer_service_path(service) do %>
-                    <i class="fa fa-eye"></i>
-                <% end %>
-                <%= link_to edit_customer_service_path(service) do %>
-                    <i class="fa fa-edit"></i>
-                <% end %>
-                <%= link_to customer_service_path(service), method: :delete, data: { confirm: 'Are you sure?' }, class: 'text-danger' do %>
-                    <i class="fa fa-trash fa-3"></i>
-                <%- end %>
-              </td>
-            </tr>
+      <!--<table class="table table-striped">-->
+        <!--<thead>-->
+        <!--<tr class="info">-->
+          <!--<th>Description</th>-->
+          <!--<th>Category</th>-->
+          <!--<th>Subcategory</th>-->
+          <!--&lt;!&ndash;<th>Start at</th>&ndash;&gt;-->
+          <!--&lt;!&ndash;<th>End at</th>&ndash;&gt;-->
+          <!--<th>Action</th>-->
+        <!--</tr>-->
+        <!--</thead>-->
+        <!--<tbody>-->
+        <!--<%# @services.each_with_index do |service, index| %>-->
+            <!--<tr class="data">-->
+              <!--<td><%#= service.service_description%></td>-->
+              <!--<td><%#= service.subcategory.category.name %></td>-->
+              <!--<td><%#= service.subcategory.name %></td>-->
+              <!--&lt;!&ndash;<td><%#= service.start_at.strftime(time_format) %></td>&ndash;&gt;-->
+              <!--&lt;!&ndash;<td><%#= service.end_at.strftime(time_format) %></td>&ndash;&gt;-->
+              <!--<td>-->
+                <!--<%#= link_to customer_service_path(service) do %>-->
+                    <!--<i class="fa fa-eye"></i>-->
+                <!--<%# end %>-->
+                <!--<%#= link_to edit_customer_service_path(service) do %>-->
+                    <!--<i class="fa fa-edit"></i>-->
+                <!--<%# end %>-->
+                <!--<%#= link_to customer_service_path(service), method: :delete, data: { confirm: 'Are you sure?' }, class: 'text-danger' do %>-->
+                    <!--<i class="fa fa-trash fa-3"></i>-->
+                <!--<%#- end %>-->
+              <!--</td>-->
+            <!--</tr>-->
+        <!--<%#- end %>-->
+        <!--</tbody>-->
+      <!--</table>-->
+      <div class="customer-main-show">
+        <% @services.each_with_index do |service, index| %>
+            <div class="white-bg">
+              <div class="col-md-2 col-sm-3 col-xs-12 text-center">
+                <div class="add-image-con">
+                  <% if service.service_images.any? %>
+                      <%= image_tag service.service_images.first.image(:size_500x500), class: 'img-responsive' %>
+                  <% else %>
+                      <%= image_tag "theme_img/500x500.png", class: 'img-responsive' %>
+                  <% end %>
+                </div>
+              </div>
+              <div class="col-md-10 col-sm-9 col-xs-12">
+                <h2 class="heading"><%= service.subcategory.name %></h2>
+                <h5 class="time-option"><%= service.start_at.strftime(time_format) %> - <%= service.end_at.strftime(time_format) %></h5>
+                <p class="description"><%= service.service_description %></p>
+                <div class="dropdown-main">
+                  <span dyn_click="<%= index + 1 %>" class="sort-arrow"><i class="fa fa-angle-down" aria-hidden="true"></i></span>
+                  <div class="clearfix"></div>
+                  <ul class="dropdown-option product_<%= index + 1 %>">
+                    <span class="arrow-top"></span>
+                    <li>
+                      <%= link_to customer_service_path(service) do %>
+                          <i class="fa fa-eye"></i> Show
+                      <%- end %>
+                    </li>
+                    <li>
+                      <%= link_to edit_customer_service_path(service) do %>
+                          <i class="fa fa-edit"></i> Edit
+                      <%- end %>
+                    </li>
+                    <li class="no_border">
+                      <%= link_to customer_service_path(service), method: :delete, data: { confirm: 'Are you sure?' }, class: 'text-danger' do %>
+                          <i class="fa fa-trash fa-3"></i> Delete
+                      <%- end %>
+                    </li>
+                  </ul>
+                </div>
+              </div>
+              <div class="clearfix"></div>
+            </div>
         <%- end %>
-        </tbody>
-      </table>
+      </div>
     </div>
   </div>
 </div>
