--- a/app/views/layouts/default.html.erb
+++ b/app/views/layouts/default.html.erb
@@ -8,6 +8,16 @@
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
   <script src='https://maps.googleapis.com/maps/api/js?v=3.exp&key=AIzaSyCA6tz5qy6wDGGw7Jp4DOYplCRNtSqZk4s'></script>
   <%= csrf_meta_tags %>
+  <script>
+    (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+          (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+        m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+    })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
+
+    ga('create', 'UA-84129879-1', 'auto');
+    ga('send', 'pageview');
+
+  </script>
 </head>
 <body>
 <%= query_diet_widget if Rails.env.development? %>
