--- a/app/views/customer/enquiries/index.html.erb
+++ b/app/views/customer/enquiries/index.html.erb
@@ -152,14 +152,18 @@
       <!--</table>-->
       <div class="customer-main-show">
         <% @enquiries[:customer_enquiries].each do |customer_enquiry| %>
-            <div class="white-bg">
-              <div class="col-xs-12">
-                <h2 class="heading"><%= customer_enquiry.is_product ? 'Product' : 'Service' %></h2>
-                <h5 class="time-option"><%= customer_enquiry.start_at.strftime(time_format) %> - <%= customer_enquiry.end_at.strftime(time_format) %></h5>
-                <p class="description"><%= customer_enquiry.description %></p>
-              </div>
-              <div class="clearfix"></div>
-            </div>
+            <%= link_to customer_enquiry_path(customer_enquiry) do %>
+                <div class="white-bg">
+                  <div class="col-xs-12">
+                    <h2 class="description"><%= customer_enquiry.is_product ?  customer_enquiry.product.name : customer_enquiry.service.service_description %></h2>
+                    <h2 class="heading"><%= customer_enquiry.is_product ? 'Product' : 'Service' %></h2>
+                    <h5 class="time-option"><%= customer_enquiry.start_at.strftime(time_format) %> - <%= customer_enquiry.end_at.strftime(time_format) %></h5>
+                    <p class="description"><%= customer_enquiry.status %></p>
+                    <p class="description"><%= customer_enquiry.description %></p>
+                  </div>
+                  <div class="clearfix"></div>
+                </div>
+            <% end %>
         <%- end %>
       </div>
     </div>
