--- a/app/views/customer/welcome/profile.html.erb
+++ b/app/views/customer/welcome/profile.html.erb
@@ -28,17 +28,21 @@
       <div class="product-detail">
         <h4>Mobile Number:</h4>
         <p class="mobile-number">
-          <%= @customer.contact%> <i class="fa fa-edit edit-icon" style="cursor: pointer;"></i>
+          <%= @customer.contact%>
+          <!--<i class="fa fa-edit edit-icon" style="cursor: pointer;"></i>-->
         </p>
         <%= form_tag customer_change_mobile_path, class: 'mobile-form', method: :put do %>
             <%= text_field_tag :contact, "", required: true %>
             <%= submit_tag("update", class: "btn btn-primary update-phn-btn") %>
         <% end %>
       </div>
+      <div class="text-right">
+        <a href="javascript:void(0)" class="change-btn">Change Password</a>
+      </div>
     </div>
     <div class="col-xs-12">
       <div class="text-center">
-        <a href="javascript:void(0)" class="change-btn">Change Password</a>
+        <!--<a href="javascript:void(0)" class="change-btn">Change Password</a>-->
         <%= form_tag customer_change_password__path, class: 'change-form', method: :put do %>
             <%= password_field_tag :password, "", class: 'pass-textfield' %>
             <%= submit_tag("update", class: "btn btn-primary change-submit") %>
